Fixed mobile nav - align right

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -39,6 +39,7 @@ body {
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
+  width: 100%;
 }
 
 .feature {
